# gpgpu

./: .gitignore  .gitignore.swp  comparison.py  dbs.py  dbsstructs.py  debug.py  execute_cuda.py  generate.py  info.txt  test.json  testing.py  tests.py
GPUImplementation/: CMakeLists.txt
Model/BGnetwork/: BGnetwork.asv  BGnetwork.m  H1.mat  IK1.mat  IK3.mat  IL1.mat  IL3.mat  INa1.mat  INa3.mat  IT1.mat  IT3.mat  Istim.mat  R1.mat  createSMC.m  initial.m  matlab_reader.py  vge.mat  vgi.mat  vsn.mat  vth.mat
Model/BGnetwork/saved_tests/test1/: ge_Isnge.mat  sn_C.mat  sn_CA.mat  sn_INa.mat  sn_R.mat  th_IT.mat
Model/BGnetwork/saveddata/: ge_ICa.mat  ge_Igege.mat  gi_v.mat  sn_ICa.mat  sn_Igesn.mat  sn_N.mat  th_H.mat  th_INa.mat
Model/BGnetwork_mod/: BGnetwork.m
Model/BGnetwork_mod/saved_tests/test1/: ge_CA3.mat  ge_H3.mat  ge_IK.mat  ge_INa.mat  ge_IT.mat  ge_Iahp.mat  ge_Iappgpe.mat  ge_N3.mat  ge_R3.mat  ge_S3.mat  ge_v.mat  sn_H.mat  sn_IK.mat  sn_IL.mat  sn_IT.mat  sn_Iahp.mat  sn_Iappstn.mat  th_IK.mat  th_IL.mat  th_R.mat  th_v.mat
Model/Backup 2017-01-16/: alpham.m  betam.m  getparams.m  stn_minf.m  stn_taun.m
Model/Backup 2017-01-16/IlijaFcns/: CleanUpTimers.m  IndirectStriatum.m  syn_func_cor_d2.m
Model/Current/: alphah.m  stn_taup.m  th_pinf.m
Model/Current/IlijaFcns/: syn_func_stn_gpea.m
Model/DBS model LabVIEW/: BrainMap.lvproj  GPe neuron.vi  STN neuron.vi  rCtx neuron.vi
References/: A biophysical model of the cortex-basal ganglia-thalamus - Appendix_A.docx
cudamodel/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile.sh  dbs.cpp  dbs.cu  main.cpp  main.cu  test.cu
cudamodel/output/: GPE_NEURON_4.txt  TH_NEURON_1.txt
cudamodel/saved_tests/: TH_NEURON_5.txt
cudamodel/saved_tests/basic/: TH_NEURON_2.txt
cudamodel/saved_tests/basic2/: GPE_NEURON_0.txt  GPE_NEURON_2.txt  GPI_NEURON_0.txt  GPI_NEURON_2.txt  GPI_NEURON_4.txt  STN_NEURON_0.txt  STN_NEURON_2.txt  STN_NEURON_3.txt  STN_NEURON_6.txt  STN_NEURON_9.txt  TH_NEURON_8.txt
cudamodel/src/: BGNetwork.cpp  BGNetwork.cu  BGNetwork.cuh  BGNetwork.h  GPeNeuron.cu  GPeNeuron.h  GPiNeuron.cu  GPiNeuron.h  STNNeuron.cu  STNNeuron.h  THNeuron.cu  THNeuron.cuh  THNeuron.h  gating.cu  gating.h
dbs_functional/: CMakeLists.txt  main.cpp  main.cu
dbs_functional/src/: BGNetwork.cpp  BGNetwork.h  GPeNeuron.cpp  Neuron.cpp  Neuron.h  THNeuron.cpp  THNeuron.h  currents.cpp  currents.h  parameter_structs.cpp  parameter_structs.h
dbs_on_gpu/: CMakeLists.txt  main.cpp
dbs_on_gpu/saved_tests/healthy_isolated_cells/output/: TH_NEURON_1.txt
dbs_on_gpu/src/: BGNetwork.cpp  BGNetwork.h  GPeNeuron.cpp  GPeNeuron.h  GPiNeuron.cpp  GPiNeuron.h  Neuron.cpp  Neuron.h  STNNeuron.cpp  STNNeuron.h  THNeuron.cpp  THNeuron.h  gating.cpp
matlabmodel/BGNetwork/: Istim.mat  initial_old.m
matlabmodel/BGnetwork/: initial.m
matlabmodel/Backup 2017-01-16/: Ggaba.m  alphan.m  alphap.m  betah.m  betan.m  change_row_to_column.m  creatdbs.m  gpe_ainf.m  minmaxsptimes.m  mtspectrumpt.m  stn_d2inf.m  stn_ninf.m  stn_taub.m  th_hinf.m  th_minf.m  th_taur.m
matlabmodel/Backup 2017-01-16/IlijaFcns/: 10sNoParkinsonNoDBSOriginal.mat  GlobusPallidusExterna.m  GlobusPallidusExternaReduced.m  InhibitoryCTX.m  NeuronThalamus.m  THVOutputs.mat  TestFcn.m  TestFile.m  TestModel.m  Untitled2.m  syn_func_gpe_gpi.m  syn_func_stn_gpi.m
matlabmodel/Current/: 5stndbs_freq95.mat  bh.m  find_spike_times.m  gpe_hinf.m  gpe_minf.m  gpe_ninf.m  gpe_rinf.m  gpe_tauh.m  make_Spectrum.m  mtfftpt.m  stn_binf.m  stn_cinf.m  stn_d1inf.m  stn_hinf.m  stn_qinf.m  stn_tauc.m  stn_taud1.m
matlabmodel/Current/IlijaFcns/: 10sParkinsonNoDBSOriginal.mat  ExcitatoryCTX.m  GlobusPallidusInterna.m  GlobusPallidusInternaReduced.m  InitializeInpOutRelationsReduced.m  LookupTableForBackup.m  RatBrainModel.m  Reduced10sNoDBSNoParkinson.mat  TestModelBackup.m  Thalamus.m  syn_func_cor_stn_a.m  syn_func_cor_stn_n.m  syn_func_gpe_gpe.m  syn_func_gpe_stn.m  syn_func_stn_gpen.m  syn_func_str_indr.m  syn_func_th.m
matlabmodel/DBS model LabVIEW/: BrainMap.aliases  BrainMap.lvlps  GPi neuron.vi  NETWORK.vi  TH neuron.vi  dStr neuron.vi
matlabmodel/og_model/BGnetwork/: BGnetwork.m  Istim.mat  final_voltages.mat  initial.m
matlabmodel/og_model/Backup 2017-01-16/: getfgrid.m  stn_ainf.m  stn_pinf.m  stn_rinf.m  stn_taua.m  stn_tauq.m  stndbs_tuning_curve.m  th_tauh.m
matlabmodel/og_model/Backup 2017-01-16/IlijaFcns/: AddTimers.m  DirectStriatum.m  InitializeInpOutRelations.m  ManipulateInpOut.m  RatBrainModel.m  SetParameters.m  SubThalamicNucleus.m  SubThalamicNucleusReduced.m  THInputs.mat  TestModelBackup2.m  ThalamusReduced.m
matlabmodel/og_model/Current/: CTX_BG_TH_network.m  ah.m  betap.m  dpsschk.m  gpe_sinf.m  gpe_taun.m  specerr.m  stn_tauh.m  stn_taum.m  th_rinf.m
matlabmodel/og_model/Current/IlijaFcns/: ManipulateInpOutReduced.m  RatBrainModelReduced.m  THOutputs.mat  syn_func_gpi_th.m  syn_func_str_dr.m
matlabmodel/og_model/DBS model LabVIEW/: iCtx neuron.vi  idStr neuron.vi
old/dbs_on_gpu/: CMakeCache.txt
old/dbs_on_gpu/src/: BGNetwork.cpp  GPeNeuron.h  THNeuron.cpp
other/old/dbs_on_gpu/: main.cpp
other/old/dbs_on_gpu/src/: BGNetwork.h  GPiNeuron.cpp  Neuron.h  gating.h
output/: TH_NEURON_0.txt
pycall/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.txt  main.cpp  main.py  pycall
python_tests/: healthy_cells.json  hello.json
